# BIMIndex

./: .cursorrules  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  ROUTING.md  TASKS.md  pyproject.toml  requirements.txt  retrieval_agent.py  retrieval_roadmap.md  retrieval_tools.py  run-app.sh  server.py
.deepharness/: CLAUDE.md
.deepharness/cache/: prompt-cache.json
.deepharness/graphs/: 0cf2988c-37b0-4613-be6f-b2a039fa01ab.json  1143bf16-7528-47ca-8eb8-660b043d2bbb.json  23a4b30d-0d10-48fd-9b40-c469cff2880a.json  3779608e-fa39-464f-ab4e-d0d762f3e397.json  37a319d1-3fb2-4343-8900-47a13f8e086f.json  539e464e-3c7a-44af-82c7-8f592675a9e5.json  608bc819-74e6-4789-9691-3480acd6fc01.json  69d66831-610f-477c-a945-1b6c824a42e1.json  6b4caaaa-e781-40d8-b7a0-97de945dbc80.json  78b2e239-6b90-4fe5-bb4e-df9ec637b4ea.json  99f0ce70-3472-4528-a20d-1615f8e3f122.json  9d6bd4bc-679f-48b2-8f74-bcdc524fae03.json  aae4156c-4ebb-45c7-8da4-c34978c205c7.json  ad48f9d9-f774-4d76-83b2-a24875690b47.json  b43d3d1b-52ad-4714-97ec-2284db5b4cc3.json  cf0a318e-1862-4749-86ea-7a062f4643ad.json  eab30ff4-6c34-42a7-ad50-2f71efe5a778.json  eefedafe-0519-46d6-87d7-61a9f938b82d.json  ef756844-835a-4d6c-acf6-105072008518.json  (+2 more)
core_processor/: health.py  pipeline.py
retrieval_research/: cli.py
skills/: SKILL.md
tests/: test_health.py  test_jobs.py  test_kuzu.py  test_lancedb.py  test_neo4j.py  test_paddle_ocr.py  test_page_index.py  test_qwen_vl.py  test_rerank.py  test_retrieval.py  test_retrieval_tools.py  test_splade.py  test_tantivy.py
(+424 files in other folders)
