[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bimindex"
version = "0.1.0"
description = "Tri-Modal Retrieval Architecture"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
dependencies = [
    "streamlit>=1.30.0",
    "gradio>=4.0.0",
    "ollama>=0.1.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "python-dotenv>=1.0.0",
    "google-genai>=1.0.0",
    "tqdm>=4.66.0",
    "opencv-python>=4.8.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
    "google-antigravity>=0.1.0",
    # Tri-Modal live backends
    "tantivy>=0.26.0",
    "lancedb>=0.25.0",
    "pyarrow>=15.0.0",
    "kuzu>=0.11.0",
    "neo4j>=5.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.5.0",
]

[project.scripts]
bimindex = "src.cli:main"

[tool.setuptools.packages.find]
include = ["src*", "retrieval_research*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
